# pyprojectsetup

./: .gitignore  readme.md  setup.cfg
examples/: Example_look_packages_into_project.py  Exemple_pip_install_conf.py  requirements.txt
src/pyprojectsetup/: __init__.py  hlp_package.py  hpl_pip_install.py  hpl_venv_install.py
tests/unit_test/: test_hpl_pip_install.py
