[metadata]
name = pyprojectsetup
version = 1.0.0
description = a python package made to configurate a project from startup (installing the required packages) or for transmissions (updating the requiredpackages)
author = Samuel Dupont
author_email = samuel.dupont@arteac-lab.fr

[options]
packages = find:
python_requires = >=3.7
#install_requires =


[options.packages.find]
where = src

